Added thumbnail images

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p9.png" alt="">
+								<img class="image img-fluid" src="images/p9-thumb.png" alt="">
 							</div>
 							<a href="images/p9.png" class="image-popup">
 								<div class="middle">
@@ -114,7 +114,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p2.png" alt="">
+								<img class="image img-fluid" src="images/p2-thumb.png" alt="">
 							</div>
 							<a href="images/p2.png" class="image-popup">
 								<div class="middle">
@@ -131,7 +131,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p3.png" alt="">
+								<img class="image img-fluid" src="images/p3-thumb.png" alt="">
 							</div>
 							<a href="images/p3.png" class="image-popup">
 								<div class="middle">
@@ -149,7 +149,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p17.png" alt="">
+								<img class="image img-fluid" src="images/p17-thumb.png" alt="">
 							</div>
 							<a href="images/p17.png" class="image-popup">
 								<div class="middle">
@@ -166,7 +166,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p27.png" alt="">
+								<img class="image img-fluid" src="images/p27-thumb.png" alt="">
 							</div>
 							<a href="images/p27.png" class="image-popup">
 								<div class="middle">
@@ -183,7 +183,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p13.png" alt="">
+								<img class="image img-fluid" src="images/p13-thumb.png" alt="">
 							</div>
 							<a href="images/p13.png" class="image-popup">
 								<div class="middle">
@@ -200,7 +200,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p45.png" alt="">
+								<img class="image img-fluid" src="images/p45-thumb.png" alt="">
 							</div>
 							<a href="images/p45.png" class="image-popup">
 								<div class="middle">
@@ -217,7 +217,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p4.png" alt="">
+								<img class="image img-fluid" src="images/p4-thumb.png" alt="">
 							</div>
 							<a href="images/p4.png" class="image-popup">
 								<div class="middle">
@@ -234,7 +234,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p49.png" alt="">
+								<img class="image img-fluid" src="images/p49-thumb.png" alt="">
 							</div>
 							<a href="images/p49.png" class="image-popup">
 								<div class="middle">
@@ -252,7 +252,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p6.png" alt="">
+								<img class="image img-fluid" src="images/p6-thumb.png" alt="">
 							</div>
 							<a href="images/p6.png" class="image-popup">
 								<div class="middle">
@@ -269,7 +269,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p41.png" alt="">
+								<img class="image img-fluid" src="images/p41-thumb.png" alt="">
 							</div>
 							<a href="images/p41.png" class="image-popup">
 								<div class="middle">
@@ -286,7 +286,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p30.png" alt="">
+								<img class="image img-fluid" src="images/p30-thumb.png" alt="">
 							</div>
 							<a href="images/p30.png" class="image-popup">
 								<div class="middle">
@@ -303,7 +303,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p23.png" alt="">
+								<img class="image img-fluid" src="images/p23-thumb.png" alt="">
 							</div>
 							<a href="images/p23.png" class="image-popup">
 								<div class="middle">
@@ -320,7 +320,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p5.png" alt="">
+								<img class="image img-fluid" src="images/p5-thumb.png" alt="">
 							</div>
 							<a href="images/p5.png" class="image-popup">
 								<div class="middle">
@@ -339,7 +339,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p18.png" alt="">
+								<img class="image img-fluid" src="images/p18-thumb.png" alt="">
 							</div>
 							<a href="images/p18.png" class="image-popup">
 								<div class="middle">
@@ -356,7 +356,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p19.png" alt="">
+								<img class="image img-fluid" src="images/p19-thumb.png" alt="">
 							</div>
 							<a href="images/p19.png" class="image-popup">
 								<div class="middle">
@@ -373,7 +373,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p37.png" alt="">
+								<img class="image img-fluid" src="images/p37-thumb.png" alt="">
 							</div>
 							<a href="images/p37.png" class="image-popup">
 								<div class="middle">
@@ -390,7 +390,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p40.png" alt="">
+								<img class="image img-fluid" src="images/p40-thumb.png" alt="">
 							</div>
 							<a href="images/p40.png" class="image-popup">
 								<div class="middle">
@@ -407,7 +407,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p8.png" alt="">
+								<img class="image img-fluid" src="images/p8-thumb.png" alt="">
 							</div>
 							<a href="images/p8.png" class="image-popup">
 								<div class="middle">
@@ -425,7 +425,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p28.png" alt="">
+								<img class="image img-fluid" src="images/p28-thumb.png" alt="">
 							</div>
 							<a href="images/p28.png" class="image-popup">
 								<div class="middle">
@@ -442,7 +442,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p11.png" alt="">
+								<img class="image img-fluid" src="images/p11-thumb.png" alt="">
 							</div>
 							<a href="images/p11.png" class="image-popup">
 								<div class="middle">
@@ -459,7 +459,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p12.png" alt="">
+								<img class="image img-fluid" src="images/p12-thumb.png" alt="">
 							</div>
 							<a href="images/p12.png" class="image-popup">
 								<div class="middle">
@@ -476,7 +476,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p14.png" alt="">
+								<img class="image img-fluid" src="images/p14-thumb.png" alt="">
 							</div>
 							<a href="images/p14.png" class="image-popup">
 								<div class="middle">
@@ -493,7 +493,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p15.png" alt="">
+								<img class="image img-fluid" src="images/p15-thumb.png" alt="">
 							</div>
 							<a href="images/p15.png" class="image-popup">
 								<div class="middle">
@@ -510,7 +510,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p16.png" alt="">
+								<img class="image img-fluid" src="images/p16-thumb.png" alt="">
 							</div>
 							<a href="images/p16.png" class="image-popup">
 								<div class="middle">
@@ -527,7 +527,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p20.png" alt="">
+								<img class="image img-fluid" src="images/p20-thumb.png" alt="">
 							</div>
 							<a href="images/p21.png" class="image-popup">
 								<div class="middle">
@@ -544,7 +544,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p21.png" alt="">
+								<img class="image img-fluid" src="images/p21-thumb.png" alt="">
 							</div>
 							<a href="images/p21.png" class="image-popup">
 								<div class="middle">
@@ -561,7 +561,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p22.png" alt="">
+								<img class="image img-fluid" src="images/p22-thumb.png" alt="">
 							</div>
 							<a href="images/p22.png" class="image-popup">
 								<div class="middle">
@@ -578,7 +578,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p24.png" alt="">
+								<img class="image img-fluid" src="images/p24-thumb.png" alt="">
 							</div>
 							<a href="images/p24.png" class="image-popup">
 								<div class="middle">
@@ -595,7 +595,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p25.png" alt="">
+								<img class="image img-fluid" src="images/p25-thumb.png" alt="">
 							</div>
 							<a href="images/p25.png" class="image-popup">
 								<div class="middle">
@@ -612,7 +612,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p26.png" alt="">
+								<img class="image img-fluid" src="images/p26-thumb.png" alt="">
 							</div>
 							<a href="images/p26.png" class="image-popup">
 								<div class="middle">
@@ -629,7 +629,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p29.png" alt="">
+								<img class="image img-fluid" src="images/p29-thumb.png" alt="">
 							</div>
 							<a href="images/p29.png" class="image-popup">
 								<div class="middle">
@@ -646,7 +646,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p32.png" alt="">
+								<img class="image img-fluid" src="images/p32-thumb.png" alt="">
 							</div>
 							<a href="images/p32.png" class="image-popup">
 								<div class="middle">
@@ -663,7 +663,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p33.png" alt="">
+								<img class="image img-fluid" src="images/p33-thumb.png" alt="">
 							</div>
 							<a href="images/p33.png" class="image-popup">
 								<div class="middle">
@@ -680,7 +680,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p34.png" alt="">
+								<img class="image img-fluid" src="images/p34-thumb.png" alt="">
 							</div>
 							<a href="images/p34.png" class="image-popup">
 								<div class="middle">
@@ -697,7 +697,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p35.png" alt="">
+								<img class="image img-fluid" src="images/p35-thumb.png" alt="">
 							</div>
 							<a href="images/p35.png" class="image-popup">
 								<div class="middle">
@@ -714,7 +714,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p36.png" alt="">
+								<img class="image img-fluid" src="images/p36-thumb.png" alt="">
 							</div>
 							<a href="images/p36.png" class="image-popup">
 								<div class="middle">
@@ -731,7 +731,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p38.png" alt="">
+								<img class="image img-fluid" src="images/p38-thumb.png" alt="">
 							</div>
 							<a href="images/p38.png" class="image-popup">
 								<div class="middle">
@@ -748,7 +748,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p39.png" alt="">
+								<img class="image img-fluid" src="images/p39-thumb.png" alt="">
 							</div>
 							<a href="images/p39.png" class="image-popup">
 								<div class="middle">
@@ -765,7 +765,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p10.png" alt="">
+								<img class="image img-fluid" src="images/p10-thumb.png" alt="">
 							</div>
 							<a href="images/p10.png" class="image-popup">
 								<div class="middle">
@@ -782,7 +782,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p47.png" alt="">
+								<img class="image img-fluid" src="images/p47-thumb.png" alt="">
 							</div>
 							<a href="images/p47.png" class="image-popup">
 								<div class="middle">
@@ -799,7 +799,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p42.png" alt="">
+								<img class="image img-fluid" src="images/p42-thumb.png" alt="">
 							</div>
 							<a href="images/p42.png" class="image-popup">
 								<div class="middle">
@@ -816,7 +816,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p43.png" alt="">
+								<img class="image img-fluid" src="images/p43-thumb.png" alt="">
 							</div>
 							<a href="images/p43.png" class="image-popup">
 								<div class="middle">
@@ -833,7 +833,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p44.png" alt="">
+								<img class="image img-fluid" src="images/p44-thumb.png" alt="">
 							</div>
 							<a href="images/p44.png" class="image-popup">
 								<div class="middle">
@@ -850,7 +850,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p46.png" alt="">
+								<img class="image img-fluid" src="images/p46-thumb.png" alt="">
 							</div>
 							<a href="images/p46.png" class="image-popup">
 								<div class="middle">
@@ -867,7 +867,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p48.png" alt="">
+								<img class="image img-fluid" src="images/p48-thumb.png" alt="">
 							</div>
 							<a href="images/p48.png" class="image-popup">
 								<div class="middle">
@@ -884,7 +884,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p50.png" alt="">
+								<img class="image img-fluid" src="images/p50-thumb.png" alt="">
 							</div>
 							<a href="images/p50.png" class="image-popup">
 								<div class="middle">
@@ -901,7 +901,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p1.png" alt="">
+								<img class="image img-fluid" src="images/p1-thumb.png" alt="">
 							</div>
 							<a href="images/p1.jpg" class="image-popup">
 								<div class="middle">
@@ -918,7 +918,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<img class="image img-fluid" src="images/p7.png" alt="">
+								<img class="image img-fluid" src="images/p7-thumb.png" alt="">
 							</div>
 							<a href="images/p7.png" class="image-popup">
 								<div class="middle">
