--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
 								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p1-thumb.png" alt="">
 							</div>
-							<a href="images/p1.jpg" class="image-popup">
+							<a href="images/p1.png" class="image-popup">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
 								</div>
