Updated code to include lighter image in the portfolio

--- a/index.html
+++ b/index.html
@@ -931,6 +931,23 @@
 							<div class="cat">other</div>
 						</div> -->
 					</div>
+					<div class="single-portfolio col-sm-4 all other">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="images/p51-thumb.png" alt="">
+							</div>
+							<a href="images/p51.png" class="image-popup">
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>
+						</div>
+						<!-- <div class="p-inner">
+							<h4>Product Box Package non-fiction</h4>
+							<div class="cat">non-fiction</div>
+						</div>                                          -->
+					</div>
 
 
 				</div>
