Updated index.html to add Howl's Moving Casle

--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
+								<img class="image img-fluid" src="images/p52-thumb.png" alt="">
+							</div>
+							<a href="images/p52.png" class="image-popup">
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>
+						</div>
+						<!-- <div class="p-inner">
+							<h4>White Space Photography</h4>
+							<div class="cat">photography</div>
+						</div> -->
+					</div>
+					<div class="single-portfolio col-sm-4 all fiction">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
 								<img class="image img-fluid" src="images/p31-thumb.png" alt="">
 							</div>
 							<a href="images/p31.png" class="image-popup">
